--- a/laravel-app/.env.example
+++ b/laravel-app/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=laravel_logs
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -59,7 +59,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 VITE_APP_NAME="${APP_NAME}"
 
 ## CloudWare Settings
-CW_LOG_NAME="laravel_logs"
+CW_LOG_NAME="${APP_NAME}"
 CW_LOG_GROUP_NAME="laravel_app"
 CW_LOG_RETENTION_DAYS=7
 CW_LOG_VERSION="latest"
