feat: update Dockerfile for Chalice app and add .gitignore

--- a/.docker/python313/Dockerfile
+++ b/.docker/python313/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.13-slim
 
-WORKDIR /var/www/chalice
+ARG DEBIAN_FRONTEND=noninteractive
+ARG USER_NAME=appuser
+ARG USER_UID=1000
+ARG USER_GID=1000
 
 # Instalar dependências do sistema
 RUN apt-get update && apt-get install -y \
@@ -8,16 +11,27 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
+# Criar usuário não-root
+RUN groupadd -r ${USER_NAME} && useradd -r -g ${USER_NAME} ${USER_NAME}
+
+# Fazer upgrade do pip, setuptools e wheel
+RUN pip install --no-cache-dir --upgrade \
+    pip \
+    setuptools \
+    wheel
+
 # Instalar Chalice e dependências Python
 RUN pip install --no-cache-dir \
-    chalice==1.26.6 \
-    boto3==1.28.0 \
-    python-dotenv==1.0.0
+    chalice==1.32.0 \
+    boto3==1.42.25 \
+    python-dotenv==1.2.1
 
-# Criar diretório para a aplicação
-RUN mkdir -p /var/www/chalice
+# Criar diretório para a aplicação e definir permissões
+RUN mkdir -p /app && chown -R ${USER_NAME}:${USER_NAME} /app
+
+# Trocar para o usuário não-root
+USER ${USER_NAME}
 
 EXPOSE 8000
 
-# Comando padrão - pode ser sobrescrito
-CMD ["chalice", "local", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["tail", "-f", "/dev/null"]
