--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,10 @@ services:
     volumes:
       - ./src:/var/www
       - type: bind
-        source: ./docker/nginx/default.conf
+        source: ./.docker/nginx/default.conf
         target: /etc/nginx/conf.d/default.conf
     depends_on:
-      - app
+      - laravel-app
     networks:
       - laravel-net
 
