--- a/laravel-app/.env.example
+++ b/laravel-app/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=laravel_logs
+APP_NAME=laravel-ai-api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TyvEhR/pQuIRljViaPes4Mbk9uxwmL+/xDjc58e/3lI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -15,19 +15,19 @@ APP_MAINTENANCE_DRIVER=file
 
 BCRYPT_ROUNDS=12
 
-LOG_CHANNEL=cloudwatch
+LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=secret
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,15 +35,15 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -56,16 +56,10 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-VITE_APP_NAME="${APP_NAME}"
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
 
-## CloudWare Settings
-CW_LOG_NAME="${APP_NAME}"
-CW_LOG_GROUP_NAME="laravel_app"
-CW_LOG_RETENTION_DAYS=7
-CW_LOG_VERSION="latest"
-CW_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID}"
-CW_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY}"
-CW_DEFAULT_REGION="${AWS_DEFAULT_REGION}"
-CW_ENDPOINT_URL="${AWS_ENDPOINT_URL}"
-CW_LOG_BATCH_SIZE=1
-CW_DISABLE_LOG=false
+VITE_APP_NAME="${APP_NAME}"
