chore: change APP_NAME

--- a/laravel-app/.env.example
+++ b/laravel-app/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=laravel-ai-api
+APP_NAME=laravel-api
 APP_ENV=local
 APP_KEY=base64:TyvEhR/pQuIRljViaPes4Mbk9uxwmL+/xDjc58e/3lI=
 APP_DEBUG=true
