--- a/laravel-app/.env.example
+++ b/laravel-app/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=laravel-api
 APP_ENV=local
-APP_KEY=base64:TyvEhR/pQuIRljViaPes4Mbk9uxwmL+/xDjc58e/3lI=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
